Fixed app's path conflict

--- a/code/train.ipynb
+++ b/code/train.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,11 @@
     "import matplotlib.pyplot as plt\n",
     "import warnings\n",
     "import time\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import mlflow\n",
+    "import pickle"
    ]
   },
   {
@@ -4096,29 +4100,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 96,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            precision  recall f1-score  support\n",
-      "          0    0.9953  0.9953   0.9953     1504\n",
-      "          1    0.8571  0.8710   0.8640       62\n",
-      "          2    0.9412  0.5333   0.6809       30\n",
-      "          3    0.4545  1.0000   0.6250       10\n",
-      "                                          \n",
-      "accuracy                      0.9819  1606\n",
-      "macro avg     0.8121  0.8499  0.7913  1606\n",
-      "weighted avg  0.9856  0.9819  0.9821  1606\n"
-     ]
-    }
-   ],
+   "source": [
+    "# Select the best model from the experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Reload the selected model and show its performance\n",
     "\n",
+    "mlflow.set_tracking_uri(\"https://mlflow.cs.ait.ac.th/\")\n",
     "model = mlflow.sklearn.load_model('models:/st124323-a3-model/staging')\n",
     "print(model.classification_report(y_test, model.predict(X_test)))"
    ]
@@ -4131,14 +4127,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create expected outputs of the intermediate function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# ref. '../app/pages/V3.py'\n",
     "\n",
-    "def mock_V3_prediction(x_1, x_2, x_3, x_4, x_5):\n",
+    "def mock_V3_class_prediction(x_1, x_2, x_3, x_4, x_5):\n",
     "    \n",
     "    # mlflow.set_tracking_uri('https://mlflow.cs.ait.ac.th/')\n",
     "    # model = mlflow.sklearn.load_model('models:/st124323-a3-model/staging')\n",
@@ -4181,92 +4184,162 @@
     "    intercept = np.ones((X.shape[0], 1))\n",
     "    X = np.concatenate((intercept, X), axis=1)\n",
     "    phat = model.predict(X)\n",
+    "    \n",
+    "    return phat   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mock_V3_class_prediction(29, 2023, 0, 1800, 130)) # Toyota, year 2023, Auto, 1800 cc, 130 bhp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mock_V3_class_prediction(4, 2018, 0, 1500, 90)) # BMW, year 2018, Auto, 1500 cc, 90 bhp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mock_V3_class_prediction(None,None,None,None,None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mock_V3_class_prediction(3,2023,None,None,None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mock_V3_class_prediction(3,2023,None,None,None).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test = mock_V3_class_prediction(3,2023,None,None,None)\n",
+    "test.shape == (1,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create expected output type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mock_V3_output(x_1, x_2, x_3, x_4, x_5):\n",
+    "    phat = mock_V3_class_prediction(x_1, x_2, x_3, x_4, x_5)[0]\n",
     "    if phat == 0:\n",
-    "        return f\"Predicted car selling price is less than 1822499.25 INR (class {phat[0]})\"\n",
+    "        return f\"Predicted car selling price is less than 1822499.25 INR (class {phat})\"\n",
     "    elif phat == 1:\n",
-    "        return f\"Predicted car selling price is between 1822499.25 INR and 3614999.5 INR (class {phat[0]})\"\n",
+    "        return f\"Predicted car selling price is between 1822499.25 INR and 3614999.5 INR (class {phat})\"\n",
     "    elif phat == 2:\n",
-    "        return f\"Predicted car selling price is between 3614999.5 INR and 5407499.75 INR (class {phat[0]})\"\n",
+    "        return f\"Predicted car selling price is between 3614999.5 INR and 5407499.75 INR (class {phat})\"\n",
     "    elif phat == 3:\n",
-    "        return f\"Predicted car selling price is more than 5407499.75 INR (class {phat[0]})\"\n",
+    "        return f\"Predicted car selling price is more than 5407499.75 INR (class {phat})\"\n",
     "    \n",
     "    return f'Uh oh. Sumting wong (phat: {phat[0]})'    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted car selling price is between 3614999.5 INR and 5407499.75 INR (class 2)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(mock_V3_prediction(29, 2023, 0, 1800, 130)) # Toyota, year 2023, Auto, 1800 cc, 130 bhp"
+    "isinstance(mock_V3_output(3,2023,None,None,None), str)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted car selling price is less than 1822499.25 INR (class 0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mock_V3_prediction(4, 2018, 0, 1500, 90)) # BMW, year 2018, Auto, 1500 cc, 90 bhp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted car selling price is less than 1822499.25 INR (class 0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mock_V3_prediction(None,None,None,None,None))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted car selling price is between 1822499.25 INR and 3614999.5 INR (class 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(mock_V3_prediction(3,2023,None,None,None))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
