--- a/code/train.ipynb
+++ b/code/train.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4108,7 +4108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4116,7 +4116,7 @@
     "\n",
     "mlflow.set_tracking_uri(\"https://mlflow.cs.ait.ac.th/\")\n",
     "model = mlflow.sklearn.load_model('models:/st124323-a3-model/staging')\n",
-    "print(model.classification_report(y_test, model.predict(X_test)))"
+    "# print(model.classification_report(y_test, model.predict(X_test)))"
    ]
   },
   {
@@ -4135,7 +4135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4143,8 +4143,6 @@
     "\n",
     "def mock_V3_class_prediction(x_1, x_2, x_3, x_4, x_5):\n",
     "    \n",
-    "    # mlflow.set_tracking_uri('https://mlflow.cs.ait.ac.th/')\n",
-    "    # model = mlflow.sklearn.load_model('models:/st124323-a3-model/staging')\n",
     "    scaler = pickle.load(open('../app/pages/codeV3/model/scaler.pkl','rb'))\n",
     "    ## scale engine and max_power\n",
     "    if x_1 is None:\n",
@@ -4340,6 +4338,34 @@
    "source": [
     "isinstance(mock_V3_output(3,2023,None,None,None), str)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "PicklingError",
+     "evalue": "Can't pickle <class '__main__.Ridge_MLFlow'>: attribute lookup Ridge_MLFlow on __main__ failed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mPicklingError\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32md:\\Work + Project\\2023 Fall\\ML\\Assignment 3\\code\\train.ipynb Cell 128\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Work%20%2B%20Project/2023%20Fall/ML/Assignment%203/code/train.ipynb#Y241sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m pickle\u001b[39m.\u001b[39;49mdump(model, \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39m./model/logismodel.pkl\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mwb\u001b[39;49m\u001b[39m'\u001b[39;49m))\n",
+      "\u001b[1;31mPicklingError\u001b[0m: Can't pickle <class '__main__.Ridge_MLFlow'>: attribute lookup Ridge_MLFlow on __main__ failed"
+     ]
+    }
+   ],
+   "source": [
+    "pickle.dump(model, open('./model/logismodel.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
