--- a/code/train.ipynb
+++ b/code/train.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "        1. name             : name of the car model\n",
     "        2. year             : built year\n",
-    "        3. selling_price    : current selling price of the car\n",
+    "        3. selling_price    : current selling price of the car (in INR)\n",
     "        4. km_driven        : total distance driven (in km)\n",
     "        5. fuel             : fuel type used\n",
     "        6. seller_type      : type of seller\n",
