add github actions to ipynb

--- a/code/train.ipynb
+++ b/code/train.ipynb
@@ -4500,6 +4500,77 @@
    "source": [
     "isinstance(mock_V3_output(3,2023,None,None,None), str)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deploy the app with github action"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Alt text](image-4.png)\n",
+    "<center>The github action summary</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The app is deploy on ml2023 server when the change is commit with tag *'v\\*'* if and only if the test cases are passed. (thest cases are generated in this notebook above)\n",
+    "- The model should return some expected predictions given predictors.\n",
+    "- The model should return the same shape of predicted results (1,)\n",
+    "- The app should be able to derive str output from the model prediction correctly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transition a staging model to a production model via github action"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Alt text](image-6.png)\n",
+    "<center>The github action summary</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Before](image-5.png)\n",
+    "<center>^^ Before ^^</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![After](image-7.png)\n",
+    "<center>^^ After ^^</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model is pushed from staging to production when th github action is executed manually and if and only if the test cases are passed.\n",
+    "- The model should be able to accept the similar format of predictors to the former model.\n",
+    "- The model should return the same shape of predicted results (1,)\n",
+    "- The model parameter should have the similar shape to the former model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
