--- a/code/train.ipynb
+++ b/code/train.ipynb
@@ -4149,7 +4149,7 @@
     }
    ],
    "source": [
-    "Image(filename='image-1.png')"
+    "Image(filename='images/image-1.png')"
    ]
   },
   {
@@ -4170,7 +4170,7 @@
     }
    ],
    "source": [
-    "Image(filename='image-2.png')"
+    "Image(filename='images/image-2.png')"
    ]
   },
   {
@@ -4184,7 +4184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4194,13 +4194,13 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image(filename='image-3.png')"
+    "Image(filename='images/image-3.png')"
    ]
   },
   {
@@ -4583,7 +4583,7 @@
     }
    ],
    "source": [
-    "Image(filename='image-4.png')"
+    "Image(filename='images/image-4.png')"
    ]
   },
   {
@@ -4629,7 +4629,7 @@
    ],
    "source": [
     "print('The buiild+deploy github action summary')\n",
-    "Image(filename='image-6.png')"
+    "Image(filename='images/image-6.png')"
    ]
   },
   {
@@ -4658,7 +4658,7 @@
    ],
    "source": [
     "print('Before')\n",
-    "Image(filename='image-5.png')"
+    "Image(filename='images/image-5.png')"
    ]
   },
   {
@@ -4687,7 +4687,7 @@
    ],
    "source": [
     "print('After')\n",
-    "Image(filename='image-7.png')"
+    "Image(filename='images/image-7.png')"
    ]
   },
   {
